# arka-mcp-gateway

./: .env.example  .gitignore  .gitmodules  COMMERCIAL.md  README.md  docker-compose.production.yml  docker-compose.yml  docker-test.sh  mkdocs.yml
backend/: .dockerignore  .env.example  Dockerfile  config.py  database.py  edition.py  main.py  middleware.py  pyproject.toml  settings.toml  start.sh  worker.py
backend/arka_mcp/: auth_middleware.py  server.py  user_aware_server.py  utils.py
backend/arka_mcp/servers/: worker_context.py
backend/arka_mcp/servers/filesystem_tools/: create_directory.py  list_directory.py  move_file.py  read_multiple_files.py  read_text_file.py  write_file.py
backend/arka_mcp/servers/gcal_tools/: __init__.py  (+31 more)
backend/auth/: __init__.py  admin.py  github.py  jwt_utils.py  mcp_jwt.py  middleware.py  password_utils.py  rate_limiter.py  rbac.py
backend/data/: mcp_server_tools.json
backend/gateway/: __init__.py  admin_endpoints.py  crypto_utils.py  mcp_permissions.py  mcp_server_endpoints.py  mcp_token_endpoints.py  models.py  oauth_db.py  registry.py  servers.py  token_context.py  tool_management_endpoints.py  tool_sync.py  tool_sync_common.py  user_preferences.py
backend/gateway/auth_providers/: __init__.py  base.py  github.py  gmail.py  google_base.py  google_calendar.py  google_tasks.py  jira.py  notion.py  registry.py  slack.py  supabase.py
backend/shared/: mcp_servers.json  mcp_servers_catalog.json
backend/utils/: README.md  check_tools.py  clear_mcp_tokens.py  populate_tools.py  reset_tools.py  update_admin.py  update_admin.sql
(+215 files in other folders)
