[project]
name = "arka-mcp-gateway-backend"
version = "0.1.0"
description = "Enterprise MCP Gateway Backend API"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-dotenv>=1.0.1",
    "authlib>=1.4.0",
    "websockets>=14.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "greenlet>=3.0.0",
    "fastmcp>=0.1.0",
    "pyjwt>=2.9.0",
    "dynaconf>=3.2.0",
    "bcrypt>=4.0.0",
    "cryptography>=41.0.0",
    "notion-client>=2.7.0",
]

[dependency-groups]
dev = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
    "mkdocs-section-index>=0.3.0",
]
